--- a/diy/diypages/diypages.wxss
+++ b/diy/diypages/diypages.wxss
@@ -16,7 +16,10 @@
 .miniad swiper {
     height: 540rpx;
 }
-
+.initPrice {
+  text-decoration:line-through;
+  color: rgb(161, 161, 161);
+}
 .miniad image {
     width: 100%;
     display: block;
