--- a/app.wxss
+++ b/app.wxss
@@ -72,13 +72,14 @@ overflow:hidden;
 }
 radio .wx-radio-input.wx-radio-input-checked::before{
    border-radius: 50%;
-   width: 16rpx; 
-   height: 16rpx; 
+   /* width: 16rpx; 
+   height: 16rpx;  */
    text-align: center;
-   font-size:0rpx; /* 对勾大小 去掉 */
-   background-color: #02A0E6; 
+    font-size:10rpx;/* 对勾大小 去掉 */
+  /* background-color: #02A0E6;  */
    transform:translate(-50%, -50%) scale(1);
    -webkit-transform:translate(-50%, -50%) scale(1);
+   
 }
 radio{
   border-radius: 50%;
