--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -22,9 +22,9 @@
 <!--content-->
    <view class="nav">
 	   <view class="this"> 普通订单</view>
-	   <view class="" bindtap="go"> 众筹订单</view>
+	   <view class="" bindtap="go" data-id="/storage/pages/zcOrder/zcOrder"> 众筹订单</view>
 	   <view class="" bindtap="go"> 定制订单</view>
-	   <view class="" bindtap="go"  data-id="../integral_order/integral_order"> 积分订单</view>
+	   <view class="" bindtap="go" data-id="../integral_order/integral_order"> 积分订单</view>
    </view>
 	<view class='title'>
 		<view class="title_list {{tab==1? 'on' : ''}}" data-current="1" bindtap="tab_click">全部</view>
