--- a/storage/pages/zcOrder/zcOrder.wxml
+++ b/storage/pages/zcOrder/zcOrder.wxml
@@ -1,52 +1,270 @@
-<view class="wrapper">
-    <view class="block">
-        <view class="block-bg">
-            <view>
-                <view class="h2">产品名称产品名称</view>
-                <view class="block-txt">
-                    <view>
-                        <text>1、感谢您对我们的支持与信任，我们将带着您的这份支持向梦想迈进。</text>
-                    </view>
-                    <view>
-                        <text>2、对于非全额支持项目的打赏用户，我们将依据您打赏的金额，按比例进行概率抽取幸运星获得项目产品。例如：本项目全额100元，有11人打赏，其中10人每人1元打赏，另外1人是90元打赏，总计筹得费用100元，那么项目成功众筹了1份产品！虽然这11个用户都有权获得该商品，但是其中支持90元的用户获得该产品的概率是：90%，其他人为10%</text>
-                    </view>
-                    <view class="read">
-                        <text>秒懂以上规则，这就支持该项目：</text>
-                    </view>
-                </view>
-            </view>
-            <view class="picker-box">
-                <view>
-                    <view class="tit">支持金额：</view>
-                    <view class="supp">
-                        <picker mode="selector" 
-                            value="{{index}}" 
-                            range="{{moneyArray}}"
-                            bindchange="bindPickerChange">
-                            <view class="picker">{{moneyArray[index]}}</view>
-                        </picker>
-                        <text class="triangle"></text>
-                    </view>
-                </view>
-                <view>
-                    <view class="tit">自定义金额：</view>
-                    <view class="input-box">
-                        <input type="number" bindblur="bindInputMoney" value="{{suppMoney}}" />
-                        <text class="unit">元</text>
-                    </view>
-                </view>
+<view class="all" style='height:{{height}}px;'>
+<!-- 弹窗 -->
+
+<view class="drawer_screen" bindtap="powerDrawer" data-statu="close" wx:if="{{showModalStatus}}"></view>
+<view wx:if='{{showPayPwdInput}}'>
+    <view class='bg_layer'></view>
+    <view class='input_main'>
+        <view class='input_title'>
+            <view class='input_back' catchtap='hidePayLayer'><text></text></view>
+            <text>输入支付密码</text>
+        </view>
+        <view class='input_tip'><text>请输入账户余额支付密码</text></view>
+        <view class='input_row' catchtap='getFocus'>
+            <view class='pwd_item' wx:for='{{6}}' wx:key='item' wx:for-index='i'>
+                <text wx:if='{{pwdVal.length>i}}'></text>
             </view>
         </view>
+        <view class='forget_pwd' catchtap='forget_password'>忘记密码</view>
+        <input class='input_control' password type='number' focus='{{payFocus}}' bindinput='inputPwd' maxlength='6'/>
     </view>
-    <view class="fBox">
-        <view class="sel">
-            <view>
-                <text>总计：</text>
-                <text class="m">￥{{suppMoney==null?moneyArray[index]:suppMoney}}</text>
-            </view>
-        </view>
-        <view class="btn" bind:tap="payment">
-            <text>去支付</text>
-        </view>
-    </view>
+</view>
+<!--content-->
+   <view class="nav">
+	   <view class="this"> 普通订单</view>
+	   <view class="" bindtap="go" data-id="/storage/pages/zcOrder/zcOrder"> 众筹订单</view>
+	   <view class="" bindtap="go"> 定制订单</view>
+	   <view class="" bindtap="go" data-id="../integral_order/integral_order"> 积分订单</view>
+   </view>
+	<view class='title'>
+		<view class="title_list {{tab==1? 'on' : ''}}" data-current="1" bindtap="tab_click">全部</view>
+		<view class="title_list {{tab==2? 'on' : ''}}" data-current="2" bindtap="tab_click">待付款</view>
+		<view class="title_list {{tab==3? 'on' : ''}}" data-current="3" bindtap="tab_click">待发货</view>
+		<view class="title_list {{tab==4? 'on' : ''}}" data-current="4" bindtap="tab_click">待收货</view>
+		<view class="title_list {{tab==5? 'on' : ''}}" data-current="5" bindtap="tab_click">待评价</view>
+	</view>
+	<view class='content'>
+		<view class='order_list' wx:for="{{order}}">
+			<view wx:if="{{item.status==1}}">
+				<view bindtap="go_order_detail" data-id="{{item.parts_order_number}}" data-status="{{item.status}}">
+					<view class='box_list_one'>
+						<view>订单编号：{{item.parts_order_number}} </view>
+						<view class='static'>等待买家付款</view>
+					</view>
+					<view class='box_list_two' wx:for="{{item.info}}">
+						<view class='img'>
+							<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+						</view>
+						<view class='good_infor'>
+							<view class='good_name'>{{item.parts_goods_name}}</view>
+							<view class='good_selling'>{{item.goods_describe}}</view>
+							<view class='good_monye'>
+								<view class='good_uite'>
+									<image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+									<text class='uite'>￥{{item.goods_money}}/片</text>
+								</view>
+								<view class='num'>x{{item.order_quantity}}</view>
+							</view>
+						</view>
+					</view>
+					<view class='box_list_three'>
+						<view><text>共{{item.all_numbers}}件商品</text><text>合计：￥{{item.all_order_real_pay}}</text> </view>
+					</view>
+				</view>
+
+				<view class='box_list_four'>
+					<view>
+						<view class='cancel' bindtap="cancel_order" data-id="{{item.parts_order_number}}">取消订单</view>
+						<view class='payment' bindtap="repay" data-id="{{item.parts_order_number}}">付款</view>
+					</view>
+				</view>
+			</view>
+			<view wx:elif="{{item.status==2 || item.status==3}}">
+				<view bindtap="go_order_detail" data-id="{{item.parts_order_number}}" data-status="{{item.status}}">
+					<view class='box_list_one'>
+						<view>订单编号：{{item.parts_order_number}} </view>
+						<view class='static'>买家已付款</view>
+					</view>
+					<view class='box_list_two' wx:for="{{item.info}}">
+						<view class='img'>
+							<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+						</view>
+						<view class='good_infor'>
+							<view class='good_name'>{{item.parts_goods_name}}</view>
+							<view class='good_selling'>{{item.goods_describe}}</view>
+							<view class='good_monye'>
+								<view class='good_uite'>
+									<image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+									<text class='uite'>￥{{item.goods_money}}/片</text>
+								</view>
+								<view class='num'>x{{item.order_quantity}}</view>
+							</view>
+						</view>
+					</view>
+					<view class='box_list_three'>
+						<view><text>共{{item.all_numbers}}件商品</text><text>合计：￥{{item.all_order_real_pay}}</text> </view>
+					</view>
+				</view>
+				<view class='box_list_four'>
+					<view>
+						<view class='remind_delivery cancel type_button' bindtap="tip_order" data-id="{{item.parts_order_number}}">提醒发货</view>
+					</view>
+				</view>
+			</view>
+			<view wx:elif="{{item.status==4 || item.status==5}}">
+				<view bindtap="go_order_detail" data-id="{{item.parts_order_number}}" data-status="{{item.status}}">
+					<view class='box_list_one'>
+						<view>订单编号：{{item.parts_order_number}} </view>
+						<view class='static'>卖家已发货</view>
+					</view>
+					<view class='box_list_two' wx:for="{{item.info}}">
+						<view class='img'>
+							<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+						</view>
+						<view class='good_infor'>
+							<view class='good_name'>{{item.parts_goods_name}}</view>
+							<view class='good_selling'>{{item.goods_describe}}</view>
+							<view class='good_monye'>
+								<view class='good_uite'>
+									<image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+									<text class='uite'>￥{{item.goods_money}}/片</text>
+								</view>
+								<view class='num'>x{{item.order_quantity}}</view>
+							</view>
+						</view>
+					</view>
+					<view class='box_list_three'>
+						<view><text>共{{item.all_numbers}}件商品</text><text>合计：￥{{item.all_order_real_pay}}</text> </view>
+					</view>
+				</view>
+				<view class='box_list_four'>
+					<view class="flex">
+						<view class="courier">顺丰：799394904004040</view>
+						<view class='remind_delivery cancel type_button' bindtap="confirm_receipt" data-id="{{item.parts_order_number}}">确认收货</view>
+					</view>
+				</view>
+			</view>
+			<view wx:elif="{{item.status==6 || item.status==7}}">
+				<view bindtap="go_order_detail" data-id="{{item.parts_order_number}}" data-status="{{item.status}}">
+					<view class='box_list_one'>
+						<view>订单编号：{{item.parts_order_number}} </view>
+						<view class='static'>交易成功</view>
+					</view>
+					<view class='box_list_two' wx:for="{{item.info}}">
+						<view class='img'>
+							<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+						</view>
+						<view class='good_infor'>
+							<view class='good_name'>{{item.parts_goods_name}}</view>
+							<view class='good_selling'>{{item.goods_describe}}</view>
+							<view class='good_monye'>
+								<view class='good_uite'>
+									<image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+									<text class='uite'>￥{{item.goods_money}}/片</text>
+								</view>
+								<view class='num'>x{{item.order_quantity}}</view>
+							</view>
+						</view>
+					</view>
+					<view class='box_list_three'>
+						<view><text>共{{item.all_numbers}}件商品</text><text>合计：￥{{item.all_order_real_pay}}</text> </view>
+					</view>
+				</view>
+				<view class='box_list_four'>
+					<view>
+						<view class='cancel type_button' bindtap="go_order_detail" data-id="{{item.parts_order_number}}" data-status="{{item.status}}">售后</view>
+						<view class='payment' bindtap="go_order_detail" data-id="{{item.parts_order_number}}" data-status="{{item.status}}">追加评价</view>
+					</view>
+				</view>
+			</view>
+			<view wx:elif="{{item.status==0 || item.status==9 || item.status==10}}">
+				<view bindtap="go_order_detail" data-id="{{item.parts_order_number}}" data-status="{{item.status}}">
+					<view class='box_list_one'>
+						<view>订单编号：{{item.parts_order_number}} </view>
+						<view class='static'>交易成功</view>
+					</view>
+					<view class='box_list_two' wx:for="{{item.info}}">
+						<view class='img'>
+							<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+						</view>
+						<view class='good_infor'>
+							<view class='good_name'>{{item.parts_goods_name}}</view>
+							<view class='good_selling'>{{item.goods_describe}}</view>
+							<view class='good_monye'>
+								<view class='good_uite'>
+									<image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+									<text class='uite'>￥{{item.goods_money}}/片</text>
+								</view>
+								<view class='num'>x{{item.order_quantity}}</view>
+							</view>
+						</view>
+					</view>
+					<view class='box_list_three'>
+						<view><text>共{{item.all_numbers}}件商品</text><text>合计：￥{{item.all_order_real_pay}}</text> </view>
+					</view>
+				</view>
+				<view class='box_list_four'>
+					<view>
+						<view class='cancel type_button' bindtap="delete_order" data-id="{{item.parts_order_number}}">删除</view>
+					</view>
+				</view>
+			</view>
+			<view wx:elif="{{item.status==8}}">
+				<view bindtap="go_order_detail" data-id="{{item.parts_order_number}}" data-status="{{item.status}}">
+					<view class='box_list_one'>
+						<view>订单编号：{{item.parts_order_number}} </view>
+						<view class='static'>交易成功</view>
+					</view>
+					<view class='box_list_two' wx:for="{{item.info}}">
+						<view class='img'>
+							<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+						</view>
+						<view class='good_infor'>
+							<view class='good_name'>{{item.parts_goods_name}}</view>
+							<view class='good_selling'>{{item.goods_describe}}</view>
+							<view class='good_monye'>
+								<view class='good_uite'>
+									<image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+									<text class='uite'>￥{{item.goods_money}}/片</text>
+								</view>
+								<view class='num'>x{{item.order_quantity}}</view>
+							</view>
+						</view>
+					</view>
+					<view class='box_list_three'>
+						<view><text>共{{item.all_numbers}}件商品</text><text>合计：￥{{item.all_order_real_pay}}</text> </view>
+					</view>
+				</view>
+				<view class='box_list_four'>
+					<view>
+						<view class='cancel type_button'>已完成</view>
+					</view>
+				</view>
+			</view>
+			<view wx:else>
+				<view bindtap="go_order_detail" data-id="{{item.parts_order_number}}" data-status="{{item.status}}">
+					<view class='box_list_one'>
+						<view>订单编号：{{item.parts_order_number}} </view>
+						<view class='static'>交易关闭</view>
+					</view>
+					<view class='box_list_two' wx:for="{{item.info}}">
+						<view class='img'>
+							<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+						</view>
+						<view class='good_infor'>
+							<view class='good_name'>{{item.parts_goods_name}}</view>
+							<view class='good_selling'>{{item.goods_describe}}</view>
+							<view class='good_monye'>
+								<view class='good_uite'>
+									<image src='{{url}}{{member_grade_img}}' class='user_img'></image>
+									<text class='uite'>￥{{item.goods_money}}/片</text>
+								</view>
+								<view class='num'>x{{item.order_quantity}}</view>
+							</view>
+						</view>
+					</view>
+					<view class='box_list_three'>
+						<view><text>共{{item.all_numbers}}件商品</text><text>合计：￥{{item.all_order_real_pay}}</text> </view>
+					</view>
+				</view>
+				<view class='box_list_four'>
+					<view>
+						<view class='cancel type_button' bindtap="delete_order" data-id="{{item.parts_order_number}}">删除</view>
+					</view>
+				</view>
+			</view>
+
+		</view>
+	</view>
+
 </view>
