--- a/storage/pages/zcOrder/zcOrder.wxml
+++ b/storage/pages/zcOrder/zcOrder.wxml
@@ -21,10 +21,10 @@
 </view>
 <!--content-->
    <view class="nav">
-	   <view class=""> 普通订单</view>
-	   <view class="this" bindtap="go" data-id="/storage/pages/zcOrder/zcOrder"> 众筹订单</view>
+	   <view class="" bindtap="go" data-id="/pages/order/order"> 普通订单</view>
+	   <view class="this"> 众筹订单</view>
 	   <view class="" bindtap="go"> 定制订单</view>
-	   <view class="" bindtap="go" data-id="../integral_order/integral_order"> 积分订单</view>
+	   <view class="" bindtap="go" data-id="/pages/integral_order/integral_order"> 积分订单</view>
    </view>
 	<view class='title'>
 		<view class="title_list {{tab==1? 'on' : ''}}" data-current="1" bindtap="tab_click">全部</view>
