--- a/pages/settlement/settlement.wxss
+++ b/pages/settlement/settlement.wxss
@@ -187,11 +187,13 @@ color:#3399FF;
 .order-goods-info{
   background: #FAFAFA;
 }
-/* radio .wx-radio-input.wx-radio-input-checked::before{
-  
-   transform:translate(-7rpx, -7rpx) scale(1);
-   -webkit-transform:translate(-7rpx, -7rpx) scale(1);
-} */
+ radio .wx-radio-input.wx-radio-input-checked::before{
+   width: auto; 
+   height: auto; 
+   font-size: 10rpx;
+   transform:translate(-50%, -50%) scale(1);
+   -webkit-transform:translate(-50%, -50%) scale(1);
+} 
 
 .radio-group{
   display: flex;
@@ -282,8 +284,13 @@ color:#3399FF;
   background: #fff;
   margin-top: 4rpx;
   margin-bottom:100rpx;
-
 }
+
+.sundry1{
+  background: #fff;
+  margin-top: 4rpx;
+}
+
 .sundry-li{
   display: flex;
   justify-content: space-between;
@@ -448,7 +455,9 @@ text-align: center;
   margin-left: 20rpx;
 }
 .invoice_money {
-  margin-left:56rpx;
+  margin-left:58rpx;
+  width:210rpx;
+  text-align:right;
 }
 /* 优惠劵 */
 .flex{
